--- a/RabotaDlyaTrpo/Registration.xaml
+++ b/RabotaDlyaTrpo/Registration.xaml
@@ -15,9 +15,9 @@
         <Button  Name="RegistrationButton" FontFamily="Helvetica" FontSize="16" Content="Зарегистрироваться" HorizontalAlignment="Left" Margin="81,323,0,0" VerticalAlignment="Top" Width="192" Click="RegistrationButton_Click"/>
         <PasswordBox Name="PasswordBox"  HorizontalAlignment="Left" Margin="143,121,0,0" VerticalAlignment="Top" Width="163"/>
         <PasswordBox  Name ="VerifyPasswordBox" HorizontalAlignment="Left" Margin="143,157,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="163"/>
-        <TextBox Name="FamiliyaTextBox" HorizontalAlignment="Left" Height="23" Margin="143,200,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="163" RenderTransformOrigin="0.503,0.478"/>
-        <TextBox Name="ImyaTextBox" HorizontalAlignment="Left" Height="23" Margin="143,238,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="163"/>
-        <TextBox Name="OtchestvoTextBox" HorizontalAlignment="Left" Height="23" Margin="143,279,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="163"/>
+        <TextBox Name="FamiliyaTextBox" HorizontalAlignment="Left" Height="23" Margin="143,200,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="163" RenderTransformOrigin="0.503,0.478" PreviewTextInput="FamiliyaTextBox_PreviewTextInput"/>
+        <TextBox Name="ImyaTextBox" HorizontalAlignment="Left" Height="23" Margin="143,238,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="163" PreviewTextInput="ImyaTextBox_PreviewTextInput"/>
+        <TextBox Name="OtchestvoTextBox" HorizontalAlignment="Left" Height="23" Margin="143,279,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="163" PreviewTextInput="OtchestvoTextBox_PreviewTextInput"/>
         <TextBlock HorizontalAlignment="Left" Margin="21,80,0,0" Foreground="White" TextWrapping="Wrap" FontFamily="Helvetica" FontSize="16" Text="Логин" VerticalAlignment="Top" Width="77" RenderTransformOrigin="0.078,0.781"/>
         <TextBlock HorizontalAlignment="Left" Margin="21,121,0,0" Foreground="White" TextWrapping="Wrap"  FontFamily="Helvetica" FontSize="16" Text="Пароль" VerticalAlignment="Top"/>
         <TextBlock HorizontalAlignment="Left" Margin="21,157,0,0" Foreground="White" TextWrapping="Wrap" FontFamily="Helvetica" FontSize="16"  Text="Подтверждение пароля" VerticalAlignment="Top" Width="122"/>
