--- a/RabotaDlyaTrpo/Registration.xaml
+++ b/RabotaDlyaTrpo/Registration.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="RabotaDlyaTrpo.Registration"
+﻿<Window x:Class="RabotaDlyaTrpo.Registration" ResizeMode="CanMinimize"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
