--- a/RabotaDlyaTrpo/MainWindow.xaml
+++ b/RabotaDlyaTrpo/MainWindow.xaml
@@ -10,13 +10,17 @@
         <ImageBrush ImageSource="Images/Nature.jpg"/>
     </Window.Background>
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="184*"/>
+            <RowDefinition Height="163*"/>
+        </Grid.RowDefinitions>
         <TextBox x:Name="LoginTextBox" HorizontalAlignment="Left" Height="23" Margin="172,90,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="127" RenderTransformOrigin="-0.067,0.565"/>
         <PasswordBox x:Name="LoginPasswordBox" HorizontalAlignment="Left" Margin="172,132,0,0" VerticalAlignment="Top" Width="127"/>
         <TextBlock HorizontalAlignment="Left" Foreground="White" Margin="34,90,0,0" FontFamily="Helvetica" FontSize="16" TextWrapping="Wrap" Text="Логин" VerticalAlignment="Top" RenderTransformOrigin="0.335,0.573"/>
         <TextBlock HorizontalAlignment="Left" Foreground="White" Margin="34,132,0,0" FontFamily="Helvetica" FontSize="16" TextWrapping="Wrap" Text="Пароль" VerticalAlignment="Top"/>
-        <Button Name="Authorization" Content="Войти" HorizontalAlignment="Left" Margin="98,204,0,0" VerticalAlignment="Top" FontFamily="Helvetica" FontSize="16"  Width="164" Click="Authorization_Click"/>
-        <Button Name="Registration" Content="Зарегистрироваться" HorizontalAlignment="Left" Margin="98,246,0,0" FontFamily="Helvetica" FontSize="16"  VerticalAlignment="Top" Width="164" Click="RegistrationClick"/>
+        <Button Name="Authorization" Content="Войти" HorizontalAlignment="Left" Margin="98,20,0,0" VerticalAlignment="Top" FontFamily="Helvetica" FontSize="16"  Width="164" Click="Authorization_Click" Grid.Row="1"/>
+        <Button Name="Registration" Content="Зарегистрироваться" HorizontalAlignment="Left" Margin="98,62,0,0" FontFamily="Helvetica" FontSize="16"  VerticalAlignment="Top" Width="164" Click="RegistrationClick" Grid.Row="1"/>
         <TextBlock HorizontalAlignment="Left"  Foreground="White" Margin="34,26,0,0" TextWrapping="Wrap" FontFamily="Helvetica" FontSize="20" Text="Авторизация" VerticalAlignment="Top"/>
-        <Button x:Name="JournalButton" Content="Журнал" FontFamily="Helvetica" FontSize="16" HorizontalAlignment="Left" Margin="98,288,0,0" VerticalAlignment="Top" Width="164" Height="27" Click="JournalButton_Click"/>
+        <Button x:Name="JournalButton" Content="Журнал" FontFamily="Helvetica" FontSize="16" HorizontalAlignment="Left" Margin="98,104,0,0" VerticalAlignment="Top" Width="164" Height="27" Click="JournalButton_Click" Grid.Row="1"/>
     </Grid>
 </Window>
