Добавлены кнопки на журнале: Архивация, Разархивация; реализована пока что одна кнопка архивации как заглушка

--- a/RabotaDlyaTrpo/Journal.xaml
+++ b/RabotaDlyaTrpo/Journal.xaml
@@ -14,8 +14,9 @@
     <Grid>
         <ListBox x:Name="JournaListBox" HorizontalAlignment="Left" Height="313"  Margin="91,46,0,0" VerticalAlignment="Top" Width="594"/>
         <Label Content="Журнал" FontFamily="Helvetica"  FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="51,10,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="ChangeUserButton" FontFamily="Helvetica" FontSize="16" Content="Сменить пользователя" HorizontalAlignment="Left" Margin="91,377,0,0" VerticalAlignment="Top" Width="180" Height="25" Click="ChangeUserButton_Click"/>
-        <Button x:Name="CheckJournalButton" Content="Просмотреть журнал" FontFamily="Helvetica" FontSize="16" HorizontalAlignment="Left" Margin="503,377,0,0" VerticalAlignment="Top" Width="182" Click="CheckJournalButton_Click"/>
-
+        <Button x:Name="ChangeUserButton" FontFamily="Helvetica" FontSize="14" Content="Сменить пользователя" HorizontalAlignment="Left" Margin="24,377,0,0" VerticalAlignment="Top" Width="183" Height="25" Click="ChangeUserButton_Click"/>
+        <Button x:Name="CheckJournalButton" Content="Просмотреть журнал" FontFamily="Helvetica" FontSize="14" HorizontalAlignment="Left" Margin="591,377,0,0" VerticalAlignment="Top" Width="191" Click="CheckJournalButton_Click" Height="25"/>
+        <Button x:Name="ArchiveJournal" Content="Зархивировать журнал" FontFamily="Helvetica" FontSize="14" FontStyle="Normal" HorizontalAlignment="Left" Margin="212,377,0,0" VerticalAlignment="Top" Width="196" Height="25" Click="ArchiveJournal_Click"/>
+        <Button x:Name="DearchiveJournal" Content="Разархивировать журнал" FontFamily="Helvetica" FontSize="14" FontStyle="Normal" HorizontalAlignment="Left" Margin="413,377,0,0" VerticalAlignment="Top" Width="173" Height="25"/>
     </Grid>
 </Window>
