Добавлены кнопки "Архивации" и "Разархивации" кнопки частично реализованы

--- a/RabotaDlyaTrpo/Journal.xaml
+++ b/RabotaDlyaTrpo/Journal.xaml
@@ -6,16 +6,22 @@
         xmlns:local="clr-namespace:RabotaDlyaTrpo"
         mc:Ignorable="d"
         
-        Title="Journal" Height="450" Width="800">
+        Title="Журнал" Height="450" Width="800">
     <Window.Background>
         <ImageBrush ImageSource="Images/Mountains.jpg"/>
     </Window.Background>
 
     <Grid>
-        <ListBox x:Name="JournaListBox" HorizontalAlignment="Left" Height="313"  Margin="91,46,0,0" VerticalAlignment="Top" Width="594"/>
-        <Label Content="Журнал" FontFamily="Helvetica"  FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="51,10,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="ChangeUserButton" FontFamily="Helvetica" FontSize="16" Content="Сменить пользователя" HorizontalAlignment="Left" Margin="91,377,0,0" VerticalAlignment="Top" Width="180" Height="25" Click="ChangeUserButton_Click"/>
-        <Button x:Name="CheckJournalButton" Content="Просмотреть журнал" FontFamily="Helvetica" FontSize="16" HorizontalAlignment="Left" Margin="503,377,0,0" VerticalAlignment="Top" Width="182" Click="CheckJournalButton_Click"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="83*"/>
+            <ColumnDefinition Width="709*"/>
+        </Grid.ColumnDefinitions>
+        <ListBox x:Name="JournaListBox" HorizontalAlignment="Left" Height="313"  Margin="8,46,0,0" VerticalAlignment="Top" Width="594" Grid.Column="1"/>
+        <Label Content="Журнал" FontFamily="Helvetica"  FontSize="20" Foreground="White" HorizontalAlignment="Left" Margin="51,10,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <Button x:Name="ChangeUserButton" FontFamily="Helvetica" FontSize="16" Content="Сменить пользователя" HorizontalAlignment="Left" Margin="10,376,0,0" VerticalAlignment="Top" Width="180" Height="25" Click="ChangeUserButton_Click" Grid.ColumnSpan="2"/>
+        <Button x:Name="CheckJournalButton" Content="Просмотреть журнал" FontFamily="Helvetica" FontSize="16" HorizontalAlignment="Left" Margin="522,376,0,0" VerticalAlignment="Top" Width="182" Click="CheckJournalButton_Click" Height="26" Grid.Column="1"/>
+        <Button x:Name="ArchiveButton" Content="Архивировать" FontFamily="Helvetica" FontSize="16" FontStretch="Normal" HorizontalAlignment="Left" Margin="117,376,0,0" VerticalAlignment="Top" Width="154" Height="26" Click="ArchiveButton_Click" Grid.Column="1"/>
+        <Button x:Name="DearchiveButton" Content="Разархивировать журнал" FontFamily="Helvetica" FontSize="16" FontStretch="Normal" HorizontalAlignment="Left" Margin="276,376,0,0" VerticalAlignment="Top" Width="241" Height="26" Click="DearchiveButton_Click" Grid.Column="1"/>
 
     </Grid>
 </Window>
