--- a/RabotaDlyaTrpo/MainProgram.xaml
+++ b/RabotaDlyaTrpo/MainProgram.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RabotaDlyaTrpo"
         mc:Ignorable="d"
-        Title="Main" Height="420" Width="800">
+        Title="Программа для вычисления ромба" Height="420" Width="800">
     <Window.Background>
         <ImageBrush ImageSource="Images/lug.jpg"/>
     </Window.Background>
