--- a/RabotaDlyaTrpo/MainWindow.xaml
+++ b/RabotaDlyaTrpo/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RabotaDlyaTrpo"
         mc:Ignorable="d"
-        Title="MainWindow" Height="375" Width="350">
+        Title="Авторизация" Height="375" Width="350">
     <Window.Background>
         <ImageBrush ImageSource="Images/Nature.jpg"/>
     </Window.Background>
