--- a/RabotaDlyaTrpo/Registration.xaml
+++ b/RabotaDlyaTrpo/Registration.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="RabotaDlyaTrpo.Registration" ResizeMode="CanMinimize"
+﻿<Window x:Name="Window" x:Class="RabotaDlyaTrpo.Registration" ResizeMode="CanMinimize"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RabotaDlyaTrpo"
         mc:Ignorable="d"
-        Title="Регистрация" Height="400" Width="375">
+        Title="Регистрация" Height="400" Width="375" Loaded="Window_Loaded">
     <Window.Background>
         <ImageBrush ImageSource="Images/Sea.jpg"/>
     </Window.Background>
